fix(ui): mat-select will wrap where needed

--- a/client/src/styles/theme.scss
+++ b/client/src/styles/theme.scss
@@ -51,3 +51,11 @@ a {
     color: #0a5;
   }
 }
+
+.mat-select-panel mat-option.mat-option {
+  height: unset;
+}
+
+.mat-option-text.mat-option-text {
+  white-space: normal;
+}
